--- a/Libreria/templates/paginas/inicio.html
+++ b/Libreria/templates/paginas/inicio.html
@@ -1,7 +1,11 @@
-{% extends 'paginas/base.html' %}
+{% extends 'base.html' %}
 
-{% block title %}Inicio{% endblock %}
+{% block titulo %}Inicio{% endblock %}
 
-{% block content %}
-<h2>Esta es la página de inicio</h2>
+{% block contenido %}
+<div class="p-5 mb-4 bg-light rounded-3">
+  <h1 class="display-5">Bienvenidos</h1>
+  <p class="lead">Este es el inicio del sitio de gestión de libros.</p>
+</div>
 {% endblock %}
+
