--- a/Libreria/templates/libros/crear.html
+++ b/Libreria/templates/libros/crear.html
@@ -1,9 +1,23 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
 
-{% block titulo %} Agregar nuevo Libro {% endblock %}
+{% block titulo %}Crear Libro{% endblock %}
 
-{% block contendio %} 
-
-Formulario para agregar nuevo libro
-
+{% block contenido %}
+<h1>Crear nuevo libro</h1>
+<form method="POST">
+  {% csrf_token %}
+  <div class="mb-3">
+    <label for="titulo" class="form-label">Título</label>
+    <input type="text" class="form-control" id="titulo" name="titulo">
+  </div>
+  <div class="mb-3">
+    <label for="autor" class="form-label">Autor</label>
+    <input type="text" class="form-control" id="autor" name="autor">
+  </div>
+  <div class="mb-3">
+    <label for="fecha_publicacion" class="form-label">Fecha de Publicación</label>
+    <input type="date" class="form-control" id="fecha_publicacion" name="fecha_publicacion">
+  </div>
+  <button type="submit" class="btn btn-primary">Crear</button>
+</form>
 {% endblock %}
